<resources>
    <string name="app_name">CST2335_Final_Project</string>
    <string name="txtBadal">OC Transpo</string>
    <string name="txtShivank">Movie Information</string>
    <string name="txtPriyanka">Patient Intake Form</string>
    <string name="txtLan">Quiz Creater</string>
    <string name="btnSearchStop">Go</string>
    <string name="actors">Actors:</string>
    <string name="genre">Genre:</string>
    <string name="description">Description:</string>
    <string name="length">Length:</string>
    <string name="rating">Rating:</string>


</resources>
